fix issue with search menu on small screens

--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,7 @@ html, body{
 }
 
 .nav_divider_div{
-	width: 300px;
+	width: 250px;
     height: 1px;
     background-color: white;
 	margin-left: 16px;
@@ -46,7 +46,7 @@ html, body{
 
 h3{
     margin-left: 40px;
-    margin-right: 40px;
+    margin-right: 40Fpx;
 	margin-bottom: 3px;
 }
 
@@ -67,9 +67,10 @@ h3{
 }
 
 #menu_container{
-	float: left;
+	display: inline-block;
 	margin-left: 20px;
-	margin-top: 10px;
+	vertical-align: top;
+	margin-top: 5px;
 	margin-right: 20px;
 }
 
@@ -114,17 +115,10 @@ h3{
     margin-left: 50px;
 }
 
-#nav_cancel{
-	width: 40px;
-	height: 40px;
-	float: right;
-	margin: 40px;
-}
-
 #overlay {
     position: fixed; 
     width: 395px; 
-    height: 60px;
+    height: 50px;
     top: 10px;
     left: 10px;
     right: 10px;
@@ -269,12 +263,26 @@ h3{
 	color: firebrick;
 }
 
-@media screen and (max-width: 1100px) {
-	#overlay{
-		width: 400px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+#open_close_arrow{
+	width: 20px;
+	height: 20px;
+	margin-left: 20px;
+}
+
+#arrow_div{
+	display: inline-block;
+	margin-top: 8px
+}
+
+#search_input{
+	vertical-align: top;
+	display: inline-block;
+	padding: 5px;
+    border-style: none;
+    font-size: 17px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-bottom: 1px solid black;
 }
 
 @media screen and (max-width: 615px){
@@ -304,15 +312,15 @@ h3{
 	#incorrect_data_div{
 		margin-left: auto;
 		margin-right: auto;
-		width: 320px;
+		width: 350px;
 	}
 
 	#incorrect_data_notes{
-		width: 235px;
+		width: 260px;
 	}
 	
 	#incorrect_cancel_btn{
-		margin-left: 65px;
+		margin-left: 95px;
 	}
 
 }
@@ -334,15 +342,20 @@ h3{
 	
 }
 
-#search_input{
-	padding: 5px;
-    border-style: none;
-    font-size: 17px;
-	padding-left: 10px;
-	padding-right: 10px;
-	border-bottom: 1px solid black;
+@media screen and (max-width: 395px){
+	#search_input{
+		width: 165px;
+	}
+	
+	#menu_container{
+		margin-left: 0px;
+		margin-right: 5px;
+	}
+	
+	#open_close_arrow{
+		margin-left: 10px;
+	}
 }
-
 
 #names_found_list{
     list-style: none;
@@ -518,13 +531,6 @@ p{
 @keyframes overlay_spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}
-
-#open_close_arrow{
-	width: 20px;
-	height: 20px;
-	margin-left: 30px;
-	margin-top: 5px;
 }
 
 .rotate_open{
